### Fixed
- [FRONTEND] Missing redis fields in template infos
- [API_PARSER] [HARFANGLAB] Increase the limit of logs in request and reduce time range of requests
- [API_PARSER] [CSC_DOMAINMANAGER] Split logs with several records
- [API_PARSER] Correctly select custom parser certificate when set
- [REPUTATION_CTX] Ensure there are no duplicates left for GeoLite files in Mongodb


## [2.15.3] - 2024-04-24
### Added
- [API_PARSER] [RAPID7_IDR] Add priority field in the logs from rapid7_idr api
- [API_PARSER] [APEX] Use the page_token parameter to prevent duplication of logs
### Fixed
- [WORKFLOW] Silent error when saving a new worflow
- [FRONTEND] [API] Correctly return Frontend information when Reputation Contexts are set
- [API_PARSER] [RETARUS] Fix bad json formatting leading to escaped string sent over rsyslog


## [2.15.2] - 2024-04-02
### Changed
- [CRON] Only update Reputation Context DB on Wednesdays and Saturdays at 2am
- [CRON] Only update security audits every night at 11pm


## [2.15.1] - 2024-03-22
### Fixed
- [FRONTEND] TCP session were not received properly when LOG Frontend was set to TCP+UDP


## [2.15.0] - 2024-03-04
### Added
- [FRONTEND] Redis stream support for input log
- [FRONTEND] Allow to simply use local Redis without worrying about parameters when creating a Redis Listener
- [REDIS] Password support for local redis
- [REDIS] New api function set_password and set_replica_of
### Changed
- [CLUSTER] Evolve daemon's code to allow correctly handling tasks during service shutdowns
- [API] Increase API key length for new clusters from 16 to 32 characters
- [INSTALL] Improve and stabilize the Redis bootstrapping process
- [CONFIG] [API] Remove the object ID from the API: there is only one configuration object!
- [API_PARSER] [NOZOMI] Add missing 'Content-Type' and 'Accept' headers in requests
### Fixed
- [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
- [REPUTATION] Changed predator references to barricade